--- a/tools/config.html
+++ b/tools/config.html
@@ -71,6 +71,16 @@
       border: thin solid darkgreen;
     }
 
+    input:focus,
+    div.bundle select:focus {
+      color: rgb(3, 4, 90);
+      background-color: rgb(239, 246, 170);
+    }
+
+    input[type="button"]:focus {
+      background-color: rgba(251, 251, 251, 0);
+    }
+
     input[type="button"]:hover {
       border: thin solid red;
     }
@@ -93,7 +103,7 @@
     .switch {
       position: relative;
       display: inline-block;
-      width: 85%;
+      width: 65%;
       min-width: 1em;
       height: 3em;
       margin-bottom: 1em;
@@ -123,21 +133,21 @@
       position: absolute;
       content: "";
       height: 2.3em;
-      width: 26px;
-      left: 4px;
-      bottom: 4px;
-      background-color: rgb(0, 56, 240);
+      width: 2em;
+      left: .5em;
+      bottom: .2em;
+      background-color: rgb(8, 50, 190);
       -webkit-transition: .4s;
       transition: .4s;
     }
 
 
     input:checked+.slider {
-      background-color: #6db466;
+      background-color: #3ca1ff;
     }
 
-    input:focus+.slider {
-      box-shadow: 0 0 1px #21f33d;
+    input:hover+.slider {
+      box-shadow: 0 0 .4em #eb5959;
     }
 
     input:checked+.slider:before {
@@ -146,12 +156,31 @@
       transform: translateX(26px);
     }
 
+    /* switch ende */
 
 
     /*kleine Displays*/
     @media all and (max-width: 75em) {
       body {
-        font-size: larger;
+        font-size: xx-large;
+      }
+
+      h1 {
+        font-size: xxx-large;
+      }
+
+      h1:first-letter,
+      h2:first-letter {
+        font-size: xxx-large;
+      }
+
+      h2 {
+        font-size: xx-large;
+      }
+
+      input,
+      select {
+        font-size: xx-large;
       }
 
       div.bundle span {
@@ -162,6 +191,8 @@
 
       div.bundle input,
       div.bundle select {
+        margin-top: .4em;
+        margin-bottom: .8em;
         border-radius: .4em;
         padding: 1em;
         width: 95%;
@@ -173,16 +204,19 @@
       }
 
       .switch {
-        width: 85%;
+        width: 98%;
         min-width: 1em;
-        height: 9em;
+        height: 6em;
+        margin-top: .4em;
         margin-bottom: 1em;
         margin-left: 1%;
         margin-right: 1%;
       }
 
       .slider:before {
-        height: 8.4em;
+        height: 5.4em;
+        width: 6em;
+        left: 1em;
       }
     }
 
@@ -230,7 +264,6 @@
   <div class="bundle" id="wlan_acces_form">
     <h2>WLAN Access</h2>
 
-
     <span><label for="wlan_access_ssid">SSID:</label></span>
     <input type="input" id="wlan_access_ssid" name="wlan_access_ssid" value="" placeholder="Your WLAN SSID" />
 
@@ -246,14 +279,14 @@
   </div>
 
   <div class="bundle" id="update_acces_form">
-    <h2>Firmware Update Access</h2>
+    <h2>Firmware Config Access</h2>
 
     <span><label for="fw_access_uid">Username:</label></span>
-    <input type="input" id="fw_access_uid" name="fw_access_uid" value="" placeholder="Username for update Access" />
+    <input type="input" id="fw_access_uid" name="fw_access_uid" value="" placeholder="Username for Access" />
 
     <span><label for="fw_access_password">Password:</label></span>
     <input type="password" id="fw_access_password" name="fw_access_password" value=""
-      placeholder="Password for update Access" />
+      placeholder="Password for Access" />
     <input type="button" value="[SAVE ACCESS]" onclick="save_update_access();">
   </div>
 
@@ -274,23 +307,17 @@
     <input type="number" id="pwm_freq" name="pwm_freq" value="5000" placeholder="Freq (Hz)" />
 
     <span><label for="pwm_invers">Invers PWM:</label></span>
-    <input type="checkbox" id="pwm_invers" name="fw_access_uid" />
-
+    <label class="switch">
+      <input type="checkbox" id="led_standby_checkbox" checked>
+      <span class="slider"></span>
+    </label>
 
     <input type="button" value="[SAVE PWM]" onclick="save_pwm_values();">
 
   </div>
 
-  <div class="bundle">
-    <h2>SWITCH TEST</h2>
 
-    <label class="switch">
-      <input type="checkbox" id="led_standby_checkbox" checked>
-      <span class="slider"></span>
-    </label>
-  </div>
-
-  <div><br /></div>
+  <div style="margin-top: 5em;"></div>
 
 
 
