--- a/tools/index.html
+++ b/tools/index.html
@@ -9,6 +9,25 @@
       font-family: Arial, Helvetica, sans-serif;
     }
 
+    a {
+      padding: 1em;
+      border: 1px solid gray;
+      color: gray;
+      font-weight: bold;
+      border-radius: .2em;
+    }
+
+    a:hover {
+      background-color: silver;
+      color: rgb(0, 0, 119);
+    }
+
+    a:active {
+      border: 2px solid red;
+      background-color: rgb(241, 122, 122);
+      color: rgb(0, 0, 119);
+    }
+
     div.complete {
       margin: 0;
       position: absolute;
@@ -18,8 +37,14 @@
       transform: translateY(-50%);
     }
 
-    div.workarea {
+    div.workarea,
+    div.linkarea {
+      margin-top: 1em;
       text-align: center;
+    }
+
+    div.linkarea {
+      margin-top: 2.5em;
     }
 
     /* switche */
@@ -41,6 +66,7 @@
     }
 
     .slider {
+      border-radius: .2em;
       position: absolute;
       cursor: pointer;
       top: 0;
@@ -81,6 +107,7 @@
 
     /*color picker*/
     input.color_picker {
+      border-radius: .2em;
       width: 45%;
       height: 5em;
       padding: .6em;
@@ -93,6 +120,21 @@
 
     /*kleine Displays*/
     @media all and (max-width: 75em) {
+      a {
+        padding: 2em;
+        font-weight: bold;
+        border-radius: .4em;
+      }
+
+      div.workarea {
+        margin-top: 2.6em;
+      }
+
+      div.linkarea {
+        margin-top: 5em;
+        font-size: 2em
+      }
+
       .switch {
         width: 85%;
         min-width: 1em;
@@ -102,12 +144,17 @@
         margin-right: 1%;
       }
 
+      .slider {
+        border-radius: .4em;
+      }
+
       .slider:before {
         height: 8.4em;
       }
 
       /*color picker*/
       input.color_picker {
+        border-radius: .4em;
         width: 75%;
         height: 10em;
         padding: .6em;
@@ -348,6 +395,9 @@
       <label class="color_picker" for="color_picker">LED COLOR</label>
       <br />
       <input class="color_picker" type="color" id="color_picker" name="color_picker" value="#b0b0b0">
+    </div>
+    <div class="linkarea">
+      <a href="/rest/config" target="_self">[ CONTROLLER CONFIG ]</a>
     </div>
   </div>
 </body>
